--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -6,9 +6,49 @@
         <section layout:fragment="contents" class="contents d-flex justify-content-center">
             <div class="input-box my-5 p-5 rounded-lg">
                 <h2 class="text-center">로그인</h2>
-                <input type="text" placeholder="아이디를 입력하세요" class="form-control mt-4">
-                <input type="password" placeholder="비밀번호를 입력하세요" class="form-control mt-2">
-                <button type="button" class="btn btn-secondary btn-block mt-3">로그인</button>
+                <input type="text" placeholder="아이디를 입력하세요" class="form-control mt-4" id="loginIdInput">
+                <input type="password" placeholder="비밀번호를 입력하세요" class="form-control mt-2" id="passwordInput">
+                <button type="button" class="btn btn-secondary btn-block mt-3" id="loginBtn">로그인</button>
             </div>
         </section>
+        
+        <script layout:fragment="script">
+        	$(document).ready(function() {
+        		$("#loginBtn").on("click", function() {
+        			
+        			let id = $("#loginIdInput").val();
+        			let password = $("#passwordInput").val();
+        			
+        			if(id == "") {
+        				alert("아이디를 입력하세요");
+        				return ;
+        			}
+        			
+        			if(password == "") {
+        				alert("비밀번호를 입력하세요");
+        				return ;
+        			}
+        			
+        			$.ajax({
+        				type:"post"
+        				, url:"/user/login"
+        				, data:{"loginId":id, "password":password}
+        				, success:function(data) {
+        					
+        					if(data.result == "success") {
+        						location.href = "/post/list-view";
+        					} else {
+        						alert("아이디와 비밀번호를 확인해 주세요");
+        					}
+        				}
+        				, error:function() {
+        					alert("로그인 에러!!");
+        				}
+        			});
+        			
+        			
+        		});
+        	});
+        
+        </script>
 </html>
