--- a/src/main/resources/templates/post/input.html
+++ b/src/main/resources/templates/post/input.html
@@ -8,7 +8,7 @@
         		<h1 class="text-center">메모 입력</h1>
         		<input type="text" class="form-control mt-4" placeholder="제목을 입력하세요" id="titleInput">
         		<textarea class="form-control mt-2" rows="10" placeholder="내용을 입력하세요" id="contentsInput"></textarea>
-        		<input type="file" class="mt-2">
+        		<input type="file" class="mt-2" id="fileInput">
         		<div class="d-flex justify-content-between mt-3">
         			<a href="/post/list-view" class="btn btn-secondary">목록으로</a>
         			<button type="button" class="btn btn-secondary" id="saveBtn">저장</button>
@@ -24,6 +24,8 @@
         			let title = $("#titleInput").val();
         			let contents = $("#contentsInput").val();
         			
+        			let file = $("#fileInput")[0].files[0];
+        			
         			if(title == "") {
         				alert("제목을 입력하세요");
         				return ;
@@ -34,10 +36,18 @@
         				return ;
         			}
         			
+        			let formData = new FormData();
+        			formData.append("title", title);
+        			formData.append("contents", contents);
+        			formData.append("imageFile", file);
+        			
         			$.ajax({
         				type:"post"
         				, url:"/post/create"
-        				, data:{"title":title, "contents":contents}
+        				, data:formData
+        				, enctype:"multipart/form-data"  // 파일 업로드 필수
+        				, processData:false  // 파일 업로드 필수
+        				, contentType:false  // 파일 업로드 필수
         				, success:function(data) {
         					if(data.result == "success") {
         						location.href = "/post/list-view";
