--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -63,8 +63,10 @@
         						alert("회원가입 실패!");
         					}
         				}
-        				, error:function() {
-        					alert("회원가입 에러!");
+        				, error:function(request) {
+        					
+        					alert(request.responseJSON.message);
+        					
         				}
         			});
         			
